5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1637_2445.log
== TEST (2019-04-14 18:41:32) 
-- CODE:
s = input("C OU F? ")
v = float(input("manda a temp: "))

c = 5/9*(v-32)
f = v*5/9+32

if s==C:
	print(round(f, 2))
	
else:
	print(round(c, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if s==C:
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:42:13) 
-- CODE:
s = input("C OU F: ")
v = float(input("manda a temp: "))

c = 5/9*(v-32)
f = v*5/9+32

if s==C:
	print(round(f, 2))
	
else:
	print(round(c, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if s==C:
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:43:16) 
-- CODE:
s = str(input("C OU F: "))
v = float(input("manda a temp: "))

c = 5/9*(v-32)
f = v*5/9+32

if s==C:
	print(round(f, 2))
	
else:
	print(round(c, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if s==C:
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:45:12) 
-- CODE:
s = str(input("C OU F: "))
v = float(input("manda a temp: "))

c = 5/9*(v-32)
f = v*5/9+32

if s == C:
	print(round(f, 2))
	
else:
	print(round(c, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if s == C:
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 18:46:43) 
-- CODE:
s = str(input("C OU F: "))
v = float(input("manda a temp: "))

K = 5/9*(v-32)
L = v*5/9+32

if s == C:
	print(round(L, 2))
	
else:
	print(round(K, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if s == C:
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
